[project]
name = "lint"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11, <4"
dependencies = []

[project.scripts]
lint = "lint:main"
format = "lint:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/lint"]
